--- a/core/templates/browse.html
+++ b/core/templates/browse.html
@@ -1,13 +1,13 @@
+{% load django_vite %}
+
 <!doctype html>
-{% load static %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
-    <script type="module" crossorigin src="/assets/index-BVRSgglH.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-C58_sqwg.css" />
+    {% vite_hmr_client %} {% vite_asset 'main.tsx' %}
   </head>
   <body>
     <div id="root"></div>
