--- a/backend/core/templates/user/acc_active_email.html
+++ b/backend/core/templates/user/acc_active_email.html
@@ -1,3 +1,2 @@
 {% autoescape off %} Hi {{ user.username }}, Please click on the link to confirm
-your registration, http://{{ domain }}{% url 'activate' uidb64=uid token=token
-%} {% endautoescape %}
+your registration, http://{{ domain }}/activate/{{ uid }}/{{ token }} {% endautoescape %}
