--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -23,6 +23,8 @@
   4. Improve text rendering
 */
 body {
+  background: #1f1f1f;
+  color: white;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
