--- a/backend/core/templates/send_confirm_new_email.html
+++ b/backend/core/templates/send_confirm_new_email.html
@@ -1,6 +1,6 @@
-{% load i18n %} {% block subject %} {% blocktrans %}Account activation on {{
+{% load i18n %} {% block subject %} {% blocktrans %}Account email change for {{
 site_name }}{% endblocktrans %} {% endblock subject %} {% block html_body %}
-<p>{% trans "Please go to the following page to activate account:" %}</p>
+<p>{% trans "Please go to the following page to update your email:" %}</p>
 {% if debug %}
 <p>
   <a href="http://localhost:3000/{{ url|safe }}?new_email={{ new_email }}"
