--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -3,6 +3,17 @@
   https://web.archive.org/web/20240425193711/https://www.joshwcomeau.com/css/custom-css-reset/ 
 */
 
+/* vars */
+
+:root {
+  --font-size: 16px;
+  --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --color-accent: #3d6aff;
+  --color-secondary: #0f0f0f;
+  --color-secondary-light: #2e2e2e;
+}
+
 /*
   1. Use a more-intuitive box-sizing model.
 */
@@ -66,4 +77,18 @@ h6 {
 #root,
 #__next {
   isolation: isolate;
+}
+
+/* Custom CSS */
+.sectionStyle {
+  display: grid;
+  grid-template-columns: 64px 1fr 158px;
+  grid-template-rows: auto auto;
+  gap: 12px;
+  background-color: #353535;
+  border-radius: 14px;
+  padding: 12px;
+
+  @media (min-width: 768px) {
+  }
 }
