--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -11,7 +11,7 @@
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --color-accent: #3d6aff;
   --color-secondary: #0f0f0f;
-  --color-secondary-light: #2e2e2e;
+  --color-secondary-light: #272727;
 }
 
 /*
