--- a/frontend/app/layout.module.css
+++ b/frontend/app/layout.module.css
@@ -22,7 +22,7 @@
 
 .versionMirror {
   display: none;
-  @media (min-width: 576px) {
+  @media screen and(min-width: 576px) {
     display: block;
   }
 }
