--- a/frontend/app/page.module.css
+++ b/frontend/app/page.module.css
@@ -19,3 +19,20 @@
   text-align: center;
   margin-top: 12px;
 }
+
+.formContainer {
+  width: 100%;
+  flex: 2;
+  @media screen and (min-width: 768px) {
+    width: auto;
+    min-width: 450px;
+    max-width: max-content;
+  }
+}
+
+.argumentTextArea {
+  min-height: 100px;
+  @media screen and (min-width: 768px) {
+    min-height: auto;
+  }
+}
