--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -6,12 +6,29 @@
 /* vars */
 
 :root {
-  --font-size: 16px;
+  --font-size: 14px;
   --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --color-accent: #3d6aff;
-  --color-secondary: #0f0f0f;
-  --color-secondary-light: #272727;
+  --color-primary: rgb(66, 66, 66);
+  --color-primary-weak: rgb(34, 34, 34);
+  --color-primary-weaker: rgb(8, 8, 8);
+  --color-primary-transparent: ;
+  --color-primary-contrast: '';
+  --color-primary-contrast-weak: '';
+
+  --color-secondary: rgb(236, 236, 236);
+  --color-secondary-weak: rgb(219, 219, 219);
+  --color-secondary-weaker: rgb(155, 155, 155);
+  --color-secondary-transparent: rgba(255, 255, 255, 0.1);
+  --color-secondary-contrast: '';
+  --color-secondary-contrast-weak: '';
+
+  --color-accent: rgb(185, 252, 0);
+  --color-accent-weak: '';
+  --color-accent-transparent: '';
+
+  --color-transparent: `rgba(255, 255, 255, 0.1) `;
+  --color-transparent-weak: `rgba(255, 255, 255, 0.2) `;
 }
 
 /*
@@ -34,8 +51,9 @@
   4. Improve text rendering
 */
 body {
-  background: #1f1f1f;
-  color: white;
+  background: var(--color-primary-weaker);
+  color: var(--color-secondary);
+  font-size: var(--font-size);
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
@@ -77,18 +95,4 @@ h6 {
 #root,
 #__next {
   isolation: isolate;
-}
-
-/* Custom CSS */
-.sectionStyle {
-  display: grid;
-  grid-template-columns: 64px 1fr auto;
-  grid-template-rows: auto auto;
-  gap: 12px;
-  background-color: #353535;
-  border-radius: 14px;
-  padding: 12px;
-
-  @media (min-width: 768px) {
-  }
 }
