Input text color fix

--- a/frontend/app/_components/search.module.scss
+++ b/frontend/app/_components/search.module.scss
@@ -4,6 +4,7 @@
   margin-bottom: 4px;
 }
 .input {
+  color: var(--color-secondary);
   background-color: var(--color-primary-weak);
   border: 2px solid var(--color-primary);
   padding: 8px 12px;
