Posts ordering on user page; Small design update; Button component optimization

--- a/frontend/app/(routes)/profile/page.module.scss
+++ b/frontend/app/(routes)/profile/page.module.scss
@@ -3,10 +3,10 @@
   padding: 24px;
 }
 
-.resultsInfoContainer {
-  padding: 12px;
-}
-
 .postsContainer {
   padding: 24px 0;
+}
+
+.postListContainer {
+  margin-bottom: 24px;
 }
