--- a/frontend/app/page.module.scss
+++ b/frontend/app/page.module.scss
@@ -34,7 +34,7 @@
 .search {
   margin: 0 12px;
   padding: 0 0 24px 0;
-  border-bottom: 2px solid var(--color-secondary-transparent);
+  border-bottom: 2px solid var(--color-primary-weak);
 }
 
 .resultsInfoContainer {
