--- a/frontend/app/_components/search.module.scss
+++ b/frontend/app/_components/search.module.scss
@@ -6,26 +6,49 @@
 
 .inputContainer {
   position: relative;
-}
-
-.icon {
-  position: absolute;
-  left: 10px;
-  top: 5px;
+  margin-bottom: 12px;
 }
 
 .input {
   color: var(--color-secondary);
-  background-color: var(--color-primary-weak);
-  border: 2px solid var(--color-primary);
-  border-radius: 8px;
-  margin-bottom: 12px;
-  padding: 8px 12px;
-  padding-left: 38px;
+  background-color: transparent;
+  border: 1px solid var(--color-primary);
+  border-radius: 999px;
+  padding: 8px 100px 8px 46px;
   width: 100%;
 
   &::placeholder {
     color: var(--color-secondary-weaker);
     font-style: italic;
   }
+}
+
+.icon {
+  position: absolute;
+  left: 16px;
+  top: 6px;
+}
+
+.inputButtonContainer {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  // padding: 0 16px 0 24px;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.inputButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 7px 20px !important; // find better way to do this later
+}
+
+.buttonLabel {
+  display: inline;
+  color: var(--color-primary);
+  margin-right: 8px;
+  font-weight: 600;
 }
