colors design update (auth)

--- a/frontend/app/(routes)/(auth)/layout.module.scss
+++ b/frontend/app/(routes)/(auth)/layout.module.scss
@@ -1,5 +1,5 @@
 .container {
-  background: var(--color-primary-weak);
+  background: var(--color-primary-weaker);
   display: flex;
   flex-direction: column;
   align-items: center;
