--- a/frontend/app/(routes)/(auth)/register/page.module.scss
+++ b/frontend/app/(routes)/(auth)/register/page.module.scss
@@ -1,5 +1,5 @@
 .container {
-  background-color: var(--color-primary-weaker);
+  background-color: var(--color-primary-weak);
   border-radius: 14px;
   padding: 24px;
 }
