--- a/frontend/app/_components/form.module.scss
+++ b/frontend/app/_components/form.module.scss
@@ -10,7 +10,7 @@
 .input,
 .textarea {
   background-color: transparent;
-  border: 1px solid var(--color-primary);
+  border: 1px solid var(--color-primary-border);
   color: var(--color-secondary);
   padding: 8px 12px;
   border-radius: 24px;
