--- a/frontend/app/page.module.scss
+++ b/frontend/app/page.module.scss
@@ -15,6 +15,7 @@
 .innerContainer {
   border-radius: 0%;
   padding: 12px;
+  padding-bottom: 28px;
 
   @media screen and (min-width: 768px) {
     border-radius: 14px;
