Inputs design update

--- a/frontend/app/(routes)/(auth)/forgot/page.module.scss
+++ b/frontend/app/(routes)/(auth)/forgot/page.module.scss
@@ -1,7 +1,7 @@
 .container {
-  background-color: var(--color-primary-weaker);
+  background-color: var(--color-primary-weak);
   border-radius: 14px;
-  padding: 12px;
+  padding: 24px;
 }
 .button {
   margin-bottom: 6px;
