Sends email to admin when new Post with link to the parent argument URL if Rebuttal or Comment

--- a/backend/core/templates/send_new_email_activated.html
+++ b/backend/core/templates/send_new_email_activated.html
@@ -1,4 +1,5 @@
-{% load i18n %} {% block subject %} {% blocktrans %}Account update for {{
-site_name }}{% endblocktrans %} {% endblock subject %} {% block html_body %}
+{% load i18n %} 
+{% block subject %} {% blocktrans %}Account update for {{ site_name }}{% endblocktrans %} {% endblock subject %} 
+{% block html_body %}
 <p>You have successfully changed your email.</p>
 {% endblock html_body %}
