--- a/backend/core/templates/notify_followers.html
+++ b/backend/core/templates/notify_followers.html
@@ -1,4 +1,6 @@
-{% load i18n %} {% block html_body %}
+{% load i18n %} 
+{% block subject %} {% blocktrans %}Account email change for {{ site_name }}{% endblocktrans %} {% endblock subject %} 
+{% block html_body %}
 <p>{% trans "Hello!" %}</p>
 <p>
   {% blocktrans %} {{ postAuthor }} just created or updated the following post: "{{ postTitle }}". {% endblocktrans %}
@@ -7,13 +9,13 @@
 {% if debug %}
 <p>
   <a href="http://localhost:3000/posts/{{ postId|safe }}"
-    >http://localhost:3000/posts/{{ postId|safe }}</a
+    >http://localhost:3000/argument/{{ postId|safe }}</a
   >
 </p>
 {% else %}
 <p>
   <a href="http://{{ domain }}/posts/{{ postId|safe }}"
-    >http://{{ domain }}/posts/{{ postId|safe }}</a
+    >http://{{ domain }}/argument/{{ postId|safe }}</a
   >
 </p>
 {% endif %}
