--- a/backend/core/templates/send_new_email_activated.html
+++ b/backend/core/templates/send_new_email_activated.html
@@ -1,5 +1,4 @@
-{% load i18n %} 
-{% block subject %} {% blocktrans %}Account update for {{ site_name }}{% endblocktrans %} {% endblock subject %} 
-{% block html_body %}
+{% load i18n %} {% block subject %} {% blocktrans %}Account update for {{
+site_name }}{% endblocktrans %} {% endblock subject %} {% block html_body %}
 <p>You have successfully changed your email.</p>
 {% endblock html_body %}
