Email notif for edits & comments on followed posts; Design update

--- a/frontend/app/_components/comments.module.scss
+++ b/frontend/app/_components/comments.module.scss
@@ -1,4 +1,11 @@
-.container {
-  padding: 8px;
+.commentsContainer {
   margin-bottom: 8px;
+}
+.commentContainer {
+  margin-bottom: 4px;
+  padding-bottom: 4px;
+  border-bottom: 2px solid var(--color-primary);
+  &:nth-last-child(1) {
+    border-bottom: none;
+  }
 }
