Temp fixed activation email link

--- a/backend/core/templates/send_confirm_new_email.html
+++ b/backend/core/templates/send_confirm_new_email.html
@@ -10,7 +10,7 @@
 </p>
 {% else %}
 <p>
-  <a href="http://{{ domain }}/{{ url|safe }}?new_email={{ new_email }}"
+  <a href="http://www.rebutify.org/{{ url|safe }}?new_email={{ new_email }}"
     >http://{{ domain }}/{{ url|safe }}?new_email={{ new_email }}</a
   >
 </p>
